--- a/LAF/src/main/webapp/META-INF/maven/com.gls/laf/pom.xml
+++ b/LAF/src/main/webapp/META-INF/maven/com.gls/laf/pom.xml
@@ -3,12 +3,6 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
 
-		
-
-	
-	
-	
-	
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.gls</groupId>
 	<artifactId>laf</artifactId>
@@ -183,12 +177,27 @@
 			<version>1.1.4.RELEASE</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.5.3</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis-spring -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-spring</artifactId>
+			<version>2.0.6</version>
+		</dependency>
 
-
-
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
 
 	</dependencies>
-
 
 	<build>
 		<plugins>
